Emergency contact, mc to main page, fix overflow issues

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -167,7 +167,7 @@
 
 /*Media Queries*/
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1211px) {
   .header-container {
     flex-direction: column;
     height: 100%;
@@ -184,6 +184,12 @@
   .header-item > ul,
   .header-item > a {
     display: none;
+  }
+}
+
+@media  screen and (max-width: 1410px ) {
+  .header-container {
+    font-size: var(--text-extra-small);
   }
 }
 
