--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -9,7 +9,7 @@
     background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url(./images/bostonskyline.jpg);
     background-size: cover; 
     background-position: center;
-    height: 75vh;
+    height: 95vh;
     width: 100%; 
     display: flex; 
     flex-direction: column;
@@ -21,8 +21,8 @@
 .hero-container h2,
 .hero-container p,
 .hero-container a {
-  color: white; /* Choose a color that contrasts well with your image */
-  margin: 0.5em 0; /* Adjust spacing as needed */
+  color: white; 
+  margin: 0.5em 0; 
 }
 
 .hero-container h1 {
@@ -51,23 +51,32 @@
     justify-content: center;
     align-items: center;
     height: 500px; 
-}   
+} 
+
+.hero-tagline a{ 
+    font-weight: bold;
+    font-size: var(--text-large);
+}
 
 .about-container{
     display: flex; 
     flex-direction: column;
     justify-content: center;
+    background-color:rgba(132, 136, 132, 0.4);
+    width: 100%;  
+    padding-left: 50px; 
+    padding-right: 50px;
 }
 
 .about{
     display: flex; 
     flex-direction:row;
     justify-content: center;
-    gap: 20px;
-    background-color: black;
     color: white; 
-    padding: 50px; 
+    padding: 20px;
+    gap: 20px;
     margin-top: 10px;
+    margin-bottom: 10px;
 } 
 
 .about-image{
@@ -75,9 +84,8 @@
     background-size:contain; 
     background-repeat: no-repeat;
     background-position: center;
-    width: 550px;  /* Adjusted width */
-    height: 460px; /* Adjusted height */
-    margin: 0 auto; /* Center the image container */
+    width: 550px;  
+    height: 460px; 
 }
 
 .about-text{
@@ -85,7 +93,6 @@
     text-align: center;
     width: 450px; 
     height: 460px; 
-    margin: 0 auto; 
 }
 
 .services-container{
@@ -103,7 +110,8 @@
     gap: 20px;
     background-color: black;
     color: white; 
-    padding: 50px; 
+    padding-left: 50px;
+    padding-right: 50px;
     margin-top: 10px;
 }
 
@@ -112,18 +120,49 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px; 
-    height: 300px; 
-    padding: 20px; 
+    max-width: 300px; 
+    max-height: 400px; 
+    padding: 20px;
+    overflow: hidden; 
 }
 
 .services-card h2{
     font-size: var(--text-large); 
 }
 
+.services-card-icon{
+    width: 100%; /* Adjust based on parent container width */
+    height: 0; /* Set height to 0 to use padding-top for aspect ratio */
+    padding-top: 25%; /* Height/Width ratio (400px height / 300px width) * 100 */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative; /* Ensure the padding-top trick works for aspect ratio */
+}
+
+
+.towing{
+    background-image: url(./images/tow-truck-tow-away-svgrepo-com.svg);
+}
+
+.garage{
+    background-image: url(./images/garage-svgrepo-com.svg);
+}
+
+.battery{
+    background-image: url(./images/tire-iron-svgrepo-com.svg);
+}
+
+.wrench{
+    background-image: url(./images/gear-tools-wrench-svgrepo-com.svg);
+}
 
 
 @media screen and (max-width: 1024px) {
+    .hero-container{
+        font-size: var(--text-extra-small);
+        height: 50vh;
+    }
     .about{
         flex-direction: column;
         gap: 10px; 
@@ -137,4 +176,13 @@
         height: 300px; 
     }
     
+    .services-cards{
+        display: flex; 
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+    }
 }
+
+
